--- a/myTalks.html
+++ b/myTalks.html
@@ -61,18 +61,18 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>HUSTEF Conference, October 18-21, 2021, Online.
-      <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
-    <li>TestFlix, October 23-24, 2021, Online.
-      <br>TALK: Better Ideas at Test Design</li>
-    <li>Ministry of Testing Sarajevo Meetup, October 27th, Online.
-      <br>TALK: How to Get Better at Exploratory Testing</li>
-    <li>A Customer Organization's Event, October 28th, Online.
-      <br>TALK: Automationist's Gambit</li>
     <li>TestJSConf, November 18-19, 2021, Online.
       <br>TALK: Go Find What We May Have Missed! </li>
+    <li>MoT Cork, November 18th, 2021, Online
+      <br>Exploring Realities of Testing - Theory to Practice</li>
+    <li>A Customer Organization's Event, November 24th, 2021, Online.
+      <br>Contemporary Exploratory Testing</li>
     <li>A Customer Organization's Event, November 26th, 2021, Online.
       <br>TALK: It's More Complicated than THAT</li>
+    <li>A Customer Organization's Event, December 17th, 2021, Online.
+      <br>TALK: Contemporary Exploratory Testing</li>
+    <li>A Customer Organization's Event, January 10th, 2022, Online.
+      <br>TALK: Increase Awareness on Testing</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -93,7 +93,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <div style="text-align: left;">
 
 <i>The Automationist's Gambit</i><br />
-&nbsp; Speaker at a customer organization (28.10.2021), Online<br />
+&nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
 &nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
 <br />
@@ -119,12 +119,16 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at Appium Lite Conference (2.9.2021), Online<br />
 <br />
 
+<i>Exploring Realities of Testing - Theory to Practice</i><br />
+&nbsp; Speaker at a MoT Cork Meetup (18.11.2021), Online<br />
+<br />
+
 <i>It's More Complicated than THAT</i><br />
 &nbsp; Speaker at a customer organization (26.11.2021), Online<br />
 <br />
 
 <i>How to Get Better at Exploratory Testing</i><br />
-&nbsp; Speaker at a customer organization (27.10.2021), Online<br />
+&nbsp; Speaker at a MoT Sarajevo Meetup (27.10.2021), Online<br />
 <br />
 
 <i>Go Find What We May Have Missed</i><br />
@@ -134,6 +138,9 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <i>A Year in Test Automation</i><br />
 &nbsp; Speaker at a QAstiontime meetup (15.9.2021), Online<br />
 <br />
+
+<i>Increase Awareness on Testing</i><br />
+&nbsp; Speaker at a customer organization  (10.1.2022), Online<br />
 
 <i>Setting Up Website Hosted on Github</i><br />
 &nbsp; Trainer at Mimmit Koodaa training (14.6.2021), Online<br />
@@ -153,6 +160,8 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Contemporary Exploratory Testing</i><br />
+&nbsp; Speaker at a customer organization  (17.12.2021), Online<br />
+&nbsp; Speaker at a customer organization  (24.11.2021), Online<br />
 &nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
 &nbsp; Keynote Speaker at Selenium Summit (7.2.2021), Online<br />
 <br />
