--- a/myTalks.html
+++ b/myTalks.html
@@ -471,6 +471,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Exploratory Testing - Explained and Experienced</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
+&nbsp; Speaker (talk) at Quality Week Event, Online (1.11.2021)<br />
 &nbsp; Speaker (workshop) at SEETEST Conference 2017, Sofia, Bulgaria (28.-29.9.2017)<br />
 &nbsp; Speaker (workshop) at TIVI Ohjelmistotestaus 2017, Helsinki, Finland (16-17.5.2017)<br />
 &nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)<br />
