--- a/myTalks.html
+++ b/myTalks.html
@@ -132,7 +132,11 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Go Find What We May Have Missed</i><br />
-&nbsp; Speaker at a testjsconf (18-19.11.2021), Online<br />
+&nbsp; Keynote Speaker at a testjsconf (18-19.11.2021), Online<br />
+<br />
+
+<i>Creating Career Opportunities in Quality Engineering</i><br />
+&nbsp; Panelist at mabl Experience (28.10.2021), Online. <br />
 <br />
 
 <i>A Year in Test Automation</i><br />
@@ -141,6 +145,8 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Increase Awareness on Testing</i><br />
 &nbsp; Speaker at a customer organization  (10.1.2022), Online<br />
+<br />
+
 
 <i>Setting Up Website Hosted on Github</i><br />
 &nbsp; Trainer at Mimmit Koodaa training (14.6.2021), Online<br />
@@ -205,7 +211,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Trainer at Exploratory Testing Academy  (29.4.2021), Online<br />
 <br />
 
-<i>Software Testing Ask Anyone Anything</i><a href="https://twitter.com/maaretp/status/1413440131495759874?s=20">>[tweet]</a><br />
+<i>Software Testing Ask Anyone Anything</i><a href="https://twitter.com/maaretp/status/1413440131495759874?s=20">[tweet]</a><br />
 &nbsp; Trainer at a customer organization  (9.7.2021), Online<br />
 <br />
 
