--- a/myTalks.html
+++ b/myTalks.html
@@ -61,16 +61,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>TestJSConf, November 18-19, 2021, Online.
-      <br>TALK: Go Find What We May Have Missed! </li>
-    <li>MoT Cork, November 18th, 2021, Online
-      <br>Exploring Realities of Testing - Theory to Practice</li>
-    <li>A Customer Organization's Event, November 24th, 2021, Online.
-      <br>Contemporary Exploratory Testing</li>
-    <li>A Customer Organization's Event, November 26th, 2021, Online.
-      <br>TALK: It's More Complicated than THAT</li>
-    <li>A Customer Organization's Event, December 17th, 2021, Online.
-      <br>TALK: Contemporary Exploratory Testing</li>
     <li>A Customer Organization's Event, January 10th, 2022, Online.
       <br>TALK: Increase Awareness on Testing</li>
   </ul>
@@ -123,8 +113,8 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at a MoT Cork Meetup (18.11.2021), Online<br />
 <br />
 
-<i>It's More Complicated than THAT</i><br />
-&nbsp; Speaker at a customer organization (26.11.2021), Online<br />
+<i>Programming Assignments in Tester Interviews</i><br />
+&nbsp; Speaker at Ohjelmistotestaus ry meetup (16.12.2021), Online<br />
 <br />
 
 <i>How to Get Better at Exploratory Testing</i><br />
