--- a/myTalks.html
+++ b/myTalks.html
@@ -63,19 +63,24 @@
   <ul>
     <li>A Customer Organization's Event, January 10th, 2022, Online.
       <br>TALK: Increase Awareness on Testing</li>
+    <li><a href="https://ti.to/ohjelmistotestaus-ry/getting-started-with-test-automation-python">Ohjelmistotestaus ry Meetup</a>, January 16th, 2022, Online.
+      <br>TALK: Getting Started With Test Automation in Python</li>
+    <li>Geekle <a href="https://events.geekle.us/qa/">QA Global Summit '22</a>, February 15-16th, 2022, Online.
+      <br>TALK: The Automationist's Gambit</li>
+    <li>TSQA, March 9-10th, 2022, Online.
+      <br>TALK: Something in the Way We Test</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
 happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
 
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
-<!--
+
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
-  Alma Talent, 26-27.5.2021
+  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi//">Tutkivan testauksen työkurssi</a>,
+  Alma Talent, 7-8.2.2022
     </ul>
--->
 <p><p>
 
 
@@ -136,7 +141,6 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <i>Increase Awareness on Testing</i><br />
 &nbsp; Speaker at a customer organization  (10.1.2022), Online<br />
 <br />
-
 
 <i>Setting Up Website Hosted on Github</i><br />
 &nbsp; Trainer at Mimmit Koodaa training (14.6.2021), Online<br />
