--- a/myTalks.html
+++ b/myTalks.html
@@ -228,6 +228,11 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
 <br />
 
+<i>Exploratory Testing Work Course Condenced Half-Day Ed.</i><br />
+&nbsp; Trainer at a customer organization (20.12.2021), Online<br />
+&nbsp; Trainer at a customer organization (21.12.2021), Online<br />
+<br />
+
 <i>Building Status - or Why None of My Advice Will Work for You Today</i><br />
 &nbsp; Keynote Speaker at Agile Testing Alliance Global Testing Retreat (12-13.12.2020), Online<br />
 <br />
