--- a/myTalks.html
+++ b/myTalks.html
@@ -114,6 +114,10 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at Appium Lite Conference (2.9.2021), Online<br />
 <br />
 
+<i>Better Ideas at Test Design</i> <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62">[Talk Turned Article]</a><br />
+&nbsp; Speaker at TextFlix (23.10.2021), Online<br />
+<br />
+
 <i>Exploring Realities of Testing - Theory to Practice</i><br />
 &nbsp; Speaker at a MoT Cork Meetup (18.11.2021), Online<br />
 <br />
