--- a/myTalks.html
+++ b/myTalks.html
@@ -102,6 +102,10 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at Applitools Future of Testing (29.6.2021), Online<br />
 <br />
 
+<i>I Have a Rock in My Shoe - Navigating Improvement</i> <a href="https://www.youtube.com/watch?v=tzHpBXhxCHE">[video]</a> <a href="https://www.slideshare.net/maaretp/atagr-i-have-a-rock-in-my-shoe-navigating-improvement">[slides]</a><br />
+&nbsp; Keynote Speaker at ATAGTR (11.12.2021), Online<br />
+<br />
+
 <i>Testing Becoming Harder to Be Valuable</i><br />
 &nbsp; Keynote Speaker at Testing Voices (29.6.2021), Online<br />
 <br />
