--- a/myTalks.html
+++ b/myTalks.html
@@ -118,7 +118,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at Appium Lite Conference (2.9.2021), Online<br />
 <br />
 
-<i>Better Ideas at Test Design</i> <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62">[Talk Turned Article]</a><br />
+<i>Better Ideas at Test Design</i> <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62">[Talk Turned Article]</a><a href="https://www.youtube.com/watch?v=zir0CWmJ8zc"> [video]</a><br />
 &nbsp; Speaker at TextFlix (23.10.2021), Online<br />
 <br />
 
