--- a/myTalks.html
+++ b/myTalks.html
@@ -61,36 +61,83 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>A Customer Organization's Event, January 10th, 2022, Online.
-      <br>TALK: Increase Awareness on Testing</li>
-    <li><a href="https://ti.to/ohjelmistotestaus-ry/getting-started-with-test-automation-python">Ohjelmistotestaus ry Meetup</a>, January 16th, 2022, Online.
-      <br>TALK: Getting Started With Test Automation in Python</li>
-    <li>Geekle <a href="https://events.geekle.us/qa/">QA Global Summit '22</a>, February 15-16th, 2022, Online.
-      <br>TALK: The Automationist's Gambit</li>
+    <li>Customer event, March 4th, 2022, Online.
+      <br>TALK: It's More Complicated that THAT! </li>
+    <li>TECH(K)NOW Day, March 8th, 2022, Online.
+      <br>TALK: Breaking Illusions with Testing</li>
+    <li>STG Webinar, March 8th, 2022, Online.
+      <br>Panel on Breaking the Bias in Software Testing</li>
     <li>TSQA, March 9-10th, 2022, Online.
       <br>TALK: Something in the Way We Test</li>
+    <li>MoT SFAX, March 30th, 2022, Online.
+      <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
+    <li>Conference, Sept 22nd, Helsinki, Finland.
+      <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
+      <br>TUTORIAL: Social Software Testing Approaches</li>
+    <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
+      <br>KEYNOTE: To be announced. </li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
 happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
 
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
-
+<!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
   <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi//">Tutkivan testauksen työkurssi</a>,
   Alma Talent, 7-8.2.2022
     </ul>
+    -->
 <p><p>
 
 
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Breaking Illusions with Testing</i><br />
+  &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online<br />
+  &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
+  &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
+  &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
+  &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
+  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
+  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Good Exploratory Testing Tactics for Taking Over Testing</i><br />
+&nbsp; Speaker at MoT SFAX (30.3.2022), Online<br />
+<br />
+
+<i>Something in the Way We Test</i><br />
+&nbsp; Speaker at TQSA (9.3.2022), Online<br />
+<br />
+
+<i>It's More Complicated that THAT!</i><br />
+&nbsp; Speaker at Customer event (4.3.2022), Online<br />
+<br />
+
+<i>Panel on Breaking the Bias in Software Testing</i><br />
+&nbsp; Panelist at STG Webinar (8.3.2022), Online<br />
+<br />
+
 <i>The Automationist's Gambit</i><br />
+&nbsp; Speaker at Geekle QA Summit (16.2.2022), Online<br />
 &nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
 &nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
+<br />
+
+<i>Python for Testers, 2 day course</i><br>
+&nbsp; Co-Teacher with Ru Cindrea (March 2022), Online<br />
+<br />
+
+<i>Getting Started with Test Automation in Python</i><br>
+&nbsp; Co-Facilitator with Ru Cindrea (16.1.2022), Online<br />
+<br />
+
+<i>Mobile Test Automation with Appium</i><br>
+&nbsp; Co-Facilitator with Ru Cindrea (17.2.2022), Online<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
@@ -135,6 +182,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Go Find What We May Have Missed</i><br />
+&nbsp; Speaker at customer event (10.1.2022), Online<br />
 &nbsp; Keynote Speaker at a testjsconf (18-19.11.2021), Online<br />
 <br />
 
@@ -146,25 +194,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at a QAstiontime meetup (15.9.2021), Online<br />
 <br />
 
-<i>Increase Awareness on Testing</i><br />
-&nbsp; Speaker at a customer organization  (10.1.2022), Online<br />
-<br />
-
 <i>Setting Up Website Hosted on Github</i><br />
 &nbsp; Trainer at Mimmit Koodaa training (14.6.2021), Online<br />
 &nbsp; Trainer at Mimmit Koodaa training (21.6.2021), Online<br />
 &nbsp; Trainer at Mimmit Koodaa training (2.8.2021), Online<br />
 &nbsp; Trainer at Mimmit Koodaa training (9.8.2021), Online<br />
 &nbsp; Trainer at Mimmit Koodaa training (16.8.2021), Online<br />
-<br />
-
-<i>Breaking Illusions with Testing</i><br />
-  &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
-  &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
-  &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
-  &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
-  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
-  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
 <br />
 
 <i>Contemporary Exploratory Testing</i><br />
