--- a/myTalks.html
+++ b/myTalks.html
@@ -69,17 +69,23 @@
       <br>Panel on Breaking the Bias in Software Testing</li>
     <li>TSQA, March 9-10th, 2022, Online.
       <br>TALK: Something in the Way We Test</li>
+    <li>Agile Testing and Test Automation Summit – North America, March 25th, Online. 
+      <br>TALK: to be determined</li>
     <li>MoT SFAX, March 30th, 2022, Online.
       <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
     <li>Conference, Sept 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
+    <li>SANAE Software Testing BEER.EX, Sept 28-29th, 2022, Bratislava, Slovakia. 
+      <br>KEYNOTE: Automationist's Gambit
+      <br>TUTORIAL: Exploring Programmatic Interfaces </li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
       <br>KEYNOTE: To be announced. </li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
-happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
+happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. 
+I make exceptions when I can travel with family since Feb 2022. <p>
 
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
 <!--
@@ -95,6 +101,14 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>The Automationist's Gambit</i><br />
+  &nbsp; Keynote Speaker at SANAE Software Testing BEER.EX (28-29.9.2022), Bratislava, Slovakia<br />
+  &nbsp; Speaker at Geekle QA Summit (16.2.2022), Online<br />
+  &nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
+  &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
+  &nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
+<br />
+  
 <i>Breaking Illusions with Testing</i><br />
   &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online<br />
   &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
@@ -119,13 +133,6 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Panel on Breaking the Bias in Software Testing</i><br />
 &nbsp; Panelist at STG Webinar (8.3.2022), Online<br />
-<br />
-
-<i>The Automationist's Gambit</i><br />
-&nbsp; Speaker at Geekle QA Summit (16.2.2022), Online<br />
-&nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
-&nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
-&nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
 <br />
 
 <i>Python for Testers, 2 day course</i><br>
