--- a/myTalks.html
+++ b/myTalks.html
@@ -69,22 +69,22 @@
       <br>Panel on Breaking the Bias in Software Testing</li>
     <li>TSQA, March 9-10th, 2022, Online.
       <br>TALK: Something in the Way We Test</li>
-    <li>Agile Testing and Test Automation Summit – North America, March 25th, Online. 
+    <li>Agile Testing and Test Automation Summit – North America, March 25th, Online.
       <br>TALK: to be determined</li>
     <li>MoT SFAX, March 30th, 2022, Online.
       <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
     <li>Conference, Sept 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
-    <li>SANAE Software Testing BEER.EX, Sept 28-29th, 2022, Bratislava, Slovakia. 
+    <li>SANAE Software Testing BEER.EX, Sept 28-29th, 2022, Bratislava, Slovakia.
       <br>KEYNOTE: Automationist's Gambit
       <br>TUTORIAL: Exploring Programmatic Interfaces </li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
-      <br>KEYNOTE: To be announced. </li>
+      <br>KEYNOTE: Targeting Errors of Omission </li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
-happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. 
+happy to appear in podcasts, webinars, remote conferences and anything that requires no travel.
 I make exceptions when I can travel with family since Feb 2022. <p>
 
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
@@ -108,7 +108,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
   &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
   &nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
 <br />
-  
+
 <i>Breaking Illusions with Testing</i><br />
   &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online<br />
   &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
@@ -117,6 +117,10 @@ I make exceptions when I can travel with family since Feb 2022. <p>
   &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
   &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
   &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Targeting Errors of Omission</i><br />
+  &nbsp; Keynote Speaker at Global Testing Retreat 2022, December 9-11th 2022, Online<br />
 <br />
 
 <i>Good Exploratory Testing Tactics for Taking Over Testing</i><br />
