--- a/myTalks.html
+++ b/myTalks.html
@@ -70,7 +70,7 @@
     <li>TSQA, March 9-10th, 2022, Online.
       <br>TALK: Something in the Way We Test</li>
     <li>Agile Testing and Test Automation Summit – North America, March 25th, Online.
-      <br>TALK: to be determined</li>
+      <br>TALK: Test Automation Process Improvement in a DevOps Team: Experience Report </li>
     <li>MoT SFAX, March 30th, 2022, Online.
       <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
     <li>Conference, Sept 22nd, Helsinki, Finland.
@@ -134,6 +134,10 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <i>It's More Complicated that THAT!</i><br />
 &nbsp; Speaker at Customer event (4.3.2022), Online<br />
 <br />
+  
+<i>Social Software Testing Approaches, 1 day tutorial</i> <br />
+&nbsp; Trainer at Conference, Sept 22nd, Helsinki, Finland.<br />
+<br />  
 
 <i>Panel on Breaking the Bias in Software Testing</i><br />
 &nbsp; Panelist at STG Webinar (8.3.2022), Online<br />
@@ -304,6 +308,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Test Automation Process Improvement in a DevOps Team: Experience Report</i><br />
+&nbsp; Speaker at Agile Testing and Test Automation Summit – North America, March 25th, Online.<br />
 &nbsp; Speaker at ICST / NEXTA 2020 (24.10.2020), Online<br />
 &nbsp; Speaker at Selenium Day ANZ (16.10.2020), Online<br />
 <br />
