--- a/myArticles.html
+++ b/myArticles.html
@@ -130,6 +130,7 @@
 <h2>Articles others write about me</h2>
 
   <ul>
+    <li><a href="https://www.bugraptors.com/blog/tech-talks-with-maaret-pyhaejaervi-exploring-the-next-stage-of-automation-testing"> Tech Talks With Maaret Pyhäjärvi: Exploring The Next Stage Of Automation Testing</a>
     <li><a href="https://saucelabs.com/blog/women-in-testing-maaret-pyhajarvi">Saucelabs on Women in Testing: Maaret Pyhäjärvi</a>
     <li><a href="https://www.aalto.fi/en/news/you-can-change-the-world-in-this-field-two-technology-alumni-talk-about-their-careers">You Can Change the World in This Field</a>, Aalto University News June 8th 2020</li>
     <li><a href="https://mimmitkoodaa.ohjelmistoebusiness.fi/blogi/tyon-voi-raataloida-itselleen-sopivaksi/">Työn voi räätälöidä itselleen sopivaksi</a>, spring 2020</li>
