--- a/myTalks.html
+++ b/myTalks.html
@@ -61,19 +61,17 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Customer event, March 4th, 2022, Online.
-      <br>TALK: It's More Complicated that THAT! </li>
-    <li>TECH(K)NOW Day, March 8th, 2022, Online.
-      <br>TALK: Breaking Illusions with Testing</li>
-    <li>STG Webinar, March 8th, 2022, Online.
-      <br>Panel on Breaking the Bias in Software Testing</li>
-    <li>TSQA, March 9-10th, 2022, Online.
-      <br>TALK: Something in the Way We Test</li>
-    <li>Agile Testing and Test Automation Summit – North America, March 25th, Online.
+    <li>Agile Testing and Test Automation Summit - North America, March 25th, Online.
       <br>TALK: Test Automation Process Improvement in a DevOps Team: Experience Report </li>
     <li>MoT SFAX, March 30th, 2022, Online.
       <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
-    <li>Conference, Sept 22nd, Helsinki, Finland.
+    <li>Customer-specific Training April 19-20th, 2022, Helsinki, Finland.
+      <br>TRAINING: Exploratory Testing Work Course, 2 days</li>
+    <li> Unannounced Conference, May 4-5th, 2022, Online.
+      <br>TALK: It's more complicated than THAT</li>
+    <li>Unannounced Conference, May 14th, 2022, Online.
+      <br>KEYNOTE: A Practitioner's Guide to Contemporary Exploratory Testing</li>
+    <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
     <li>SANAE Software Testing BEER.EX, Sept 28-29th, 2022, Bratislava, Slovakia.
@@ -110,13 +108,33 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Breaking Illusions with Testing</i><br />
-  &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online<br />
+  &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online <a href="https://www.youtube.com/watch?v=oQXbs3awemg">[video]</a><br />
   &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
   &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
   &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
   &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
   &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
   &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for a customer organization (2-days), Helsinki, Finland (19-20.4.2022) <br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (26-27.5.2021) <br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (9-10.2.2021) <br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
+&nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
+&nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
+&nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
+&nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
+&nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
+&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
+&nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
+&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
+&nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
+<br />
+
+<i>It's More Complicated that THAT!</i><br />
+&nbsp; Speaker at Customer event (4.3.2022), Online<br />
 <br />
 
 <i>Targeting Errors of Omission</i><br />
@@ -131,13 +149,9 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at TQSA (9.3.2022), Online<br />
 <br />
 
-<i>It's More Complicated that THAT!</i><br />
-&nbsp; Speaker at Customer event (4.3.2022), Online<br />
-<br />
-  
 <i>Social Software Testing Approaches, 1 day tutorial</i> <br />
 &nbsp; Trainer at Conference, Sept 22nd, Helsinki, Finland.<br />
-<br />  
+<br />
 
 <i>Panel on Breaking the Bias in Software Testing</i><br />
 &nbsp; Panelist at STG Webinar (8.3.2022), Online<br />
@@ -271,20 +285,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at a customer organization (22.1.2021), Online<br />
 <br />
 
-<i>Exploratory Testing Work Course</i><br />
-&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (26-27.5.2021) <br />
-&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (9-10.2.2021) <br />
-&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
-&nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
-&nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
-&nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
-&nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
-&nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
-&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
-&nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
-&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
-&nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
-<br />
+
 
 <i>Exploratory Testing Work Course Condenced Half-Day Ed.</i><br />
 &nbsp; Trainer at a customer organization (20.12.2021), Online<br />
