--- a/myArticles.html
+++ b/myArticles.html
@@ -49,7 +49,7 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul>
-    <li>The Testing Show, March 2022.</li>
+    <li>The Testing Show, <a href="https://qualitestgroup.com/insights/podcasts/the-testing-show-women-in-testing-part-1/">Women in Testing Part 1</a> and Part 2, March 2022.</li>
     <li>Data Democratization Podcast, March 2022, <a href="https://mostly.ai/data-democratization-podcast/data-challenges-in-testing/">Data Challenges in Software Testing with Maaret Pyhäjärvi</a>, Episode 28, on March 2022. </li>
     <li>Koodia Pinnan Alla, <a href="https://koodiapinnanalla.fi/episodes/7-testaaminen-pinnan-alla-GQGlROtU">Testaaminen pinnan alla</a>, May 25th 2021 </li>
     <li>Quare Meetcast, <a href="https://open.spotify.com/episode/4zD1JdIBPCXeluxbIf9MAm">Exploratory Testing Reclaimed with Maaret and Anne-Marie</a> on December 16th 2020. </li>
