--- a/myTalks.html
+++ b/myTalks.html
@@ -67,10 +67,12 @@
       <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
     <li>Customer-specific Training April 19-20th, 2022, Helsinki, Finland.
       <br>TRAINING: Exploratory Testing Work Course, 2 days</li>
-    <li> Unannounced Conference, May 4-5th, 2022, Online.
+    <li> SauceCon, May 4-5th, 2022, Online.
       <br>TALK: It's more complicated than THAT</li>
     <li>Unannounced Conference, May 14th, 2022, Online.
       <br>KEYNOTE: A Practitioner's Guide to Contemporary Exploratory Testing</li>
+    <li>Software Testing Karlsruhe -meetup, June 14th, 2022, Online. 
+      <br>TALK: Automationist's Gambit</li>
     <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
@@ -101,6 +103,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 
 <i>The Automationist's Gambit</i><br />
   &nbsp; Keynote Speaker at SANAE Software Testing BEER.EX (28-29.9.2022), Bratislava, Slovakia<br />
+  &nbsp; Speaker at Software Testing Karlsruhe meetup (14.6.2022), Online<br />
   &nbsp; Speaker at Geekle QA Summit (16.2.2022), Online<br />
   &nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
   &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
@@ -132,13 +135,22 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
 &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
 <br />
-
-<i>It's More Complicated that THAT!</i><br />
-&nbsp; Speaker at Customer event (4.3.2022), Online<br />
+  
+<i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
+  &nbsp; Keynote Speaker at Unannounced Conference 2022, 14.5.2022, Online<br />
 <br />
 
+<i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
+  &nbsp; Keynote Speaker at Testing Assembly 2022, 22.9.2022, Helsinki, Finland<br />
+<br /> 
+  
 <i>Targeting Errors of Omission</i><br />
   &nbsp; Keynote Speaker at Global Testing Retreat 2022, December 9-11th 2022, Online<br />
+<br />
+    
+<i>It's More Complicated that THAT!</i><br />
+&nbsp; Speaker at SauceCon (4-5.5.2022), Online<br />
+&nbsp; Speaker at Customer event (4.3.2022), Online<br />
 <br />
 
 <i>Good Exploratory Testing Tactics for Taking Over Testing</i><br />
