Update talks list

--- a/myTalks.html
+++ b/myTalks.html
@@ -26,7 +26,7 @@
 
 <h1>Speaking Engagements</h1>
 
-<h4>Spoken at events in 27 countries</h4>
+<h4>Spoken at events in 28 countries</h4>
     <img class="flag" height="20" src="img/flags/4x3/fi.svg" alt="Finland ">
     <img class="flag" height="20" src="img/flags/4x3/se.svg" alt="Sweden">
     <img class="flag" height="20" src="img/flags/4x3/no.svg" alt="Norway">
@@ -54,6 +54,7 @@
     <img class="flag" height="20" src="img/flags/4x3/nz.svg" alt="New Zealand">
     <img class="flag" height="20" src="img/flags/4x3/lk.svg" alt="Sri Lanka">
     <img class="flag" height="20" src="img/flags/4x3/my.svg" alt="Malaysia">
+    <img class="flag" height="20" src="img/flags/4x3/sk.svg" alt="Slovakia">
 
 <p><p>
 
@@ -61,18 +62,14 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Agile Testing and Test Automation Summit - North America, March 25th, Online.
-      <br>TALK: Test Automation Process Improvement in a DevOps Team: Experience Report </li>
-    <li>MoT SFAX, March 30th, 2022, Online.
-      <br>Good Exploratory Testing Tactics for Taking Over Testing</li>
-    <li>Customer-specific Training April 19-20th, 2022, Helsinki, Finland.
-      <br>TRAINING: Exploratory Testing Work Course, 2 days</li>
-    <li> SauceCon, May 4-5th, 2022, Online.
-      <br>TALK: It's more complicated than THAT</li>
-    <li>Unannounced Conference, May 14th, 2022, Online.
+    <li><a href="https://axiomconf.thetestchat.info">Axiom Summit</a>, May 14th, 2022, Online.
       <br>KEYNOTE: A Practitioner's Guide to Contemporary Exploratory Testing</li>
     <li>Software Testing Karlsruhe -meetup, June 14th, 2022, Online. 
       <br>TALK: Automationist's Gambit</li>
+    <li>Customer event, June 14th, Online
+      <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
+    <li>Socrates Germany, August 25-28, Soltau, Germany
+      <br>SESSION: Ensemble Programming </li>
     <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
@@ -142,6 +139,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
   &nbsp; Keynote Speaker at Testing Assembly 2022, 22.9.2022, Helsinki, Finland<br />
+  &nbsp; Speaker at Customer event, 14.6.2022, Helsinki, Finland<br />
 <br /> 
   
 <i>Targeting Errors of Omission</i><br />
