Add country on main page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <div class="flags-container">
-<h4>Spoken at events in 27 countries</h4>
+<h4>Spoken at events in 28 countries</h4>
   <img class="flag" height="20" src="img/flags/4x3/fi.svg" alt="Finland">
   <img class="flag" height="20" src="img/flags/4x3/se.svg" alt="Sweden">
   <img class="flag" height="20" src="img/flags/4x3/no.svg" alt="Norway">
@@ -75,6 +75,8 @@
   <img class="flag" height="20" src="img/flags/4x3/nz.svg" alt="New Zealand">
   <img class="flag" height="20" src="img/flags/4x3/lk.svg" alt="Sri Lanka">
   <img class="flag" height="20" src="img/flags/4x3/my.svg" alt="Malaysia">
+  <img class="flag" height="20" src="img/flags/4x3/sk.svg" alt="Slovakia">
+
   <br><a class="blacktext" href="https://maaretp.com/myTalks.html">[All Delivered Talks, Workshops and Trainings]</a>
   <a class="blacktext" href="https://maaretp.com/teach/">  [Courses and Workshops]</a>
 
