Add new talk commitment

--- a/myTalks.html
+++ b/myTalks.html
@@ -66,9 +66,11 @@
       <br>KEYNOTE: A Practitioner's Guide to Contemporary Exploratory Testing</li>
     <li>Software Testing Karlsruhe -meetup, June 14th, 2022, Online. 
       <br>TALK: Automationist's Gambit</li>
-    <li>Customer event, June 14th, Online
+    <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
-    <li>Socrates Germany, August 25-28, Soltau, Germany
+    <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
+      <br>TALK: How to Get Better at Exploratory Testing </li>
+      <li>Socrates Germany, August 25-28, Soltau, Germany
       <br>SESSION: Ensemble Programming </li>
     <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
@@ -134,7 +136,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
   
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
-  &nbsp; Keynote Speaker at Unannounced Conference 2022, 14.5.2022, Online<br />
+  &nbsp; Keynote Speaker at Axiom Summit Conference 2022, 14.5.2022, Online<br />
 <br />
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
