add video to a talk

--- a/myTalks.html
+++ b/myTalks.html
@@ -181,7 +181,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Co-Facilitator with Ru Cindrea (17.2.2022), Online<br />
 <br />
 
-<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
+<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i> <a href="https://www.youtube.com/watch?v=uAPwRaKIa9E">[video]</a><br />
 &nbsp; Keynote Speaker at HUSTEF Conference (18-21.10.2021), Online<br />
 &nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
 <br />
