--- a/myTalks.html
+++ b/myTalks.html
@@ -62,15 +62,15 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://axiomconf.thetestchat.info">Axiom Summit</a>, May 14th, 2022, Online.
-      <br>KEYNOTE: A Practitioner's Guide to Contemporary Exploratory Testing</li>
     <li>Software Testing Karlsruhe -meetup, June 14th, 2022, Online. 
       <br>TALK: Automationist's Gambit</li>
     <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
+    <li><a href="https://www.meetup.com/test-automation-talks/events/285938225/">Test Automation Talks</a>, July rth, 2022, Online.
+        <br>TALK: Contemporary Exploratory Testing</li>
     <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
-      <br>TALK: How to Get Better at Exploratory Testing </li>
-      <li>Socrates Germany, August 25-28, Soltau, Germany
+       <br>TALK: How to Get Better at Exploratory Testing </li>
+    <li>Socrates Germany, August 25-28, Soltau, Germany
       <br>SESSION: Ensemble Programming </li>
     <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
@@ -244,6 +244,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Contemporary Exploratory Testing</i><br />
+&nbsp; Speaker at Test Automation Talks Meetup (5.7.2022), Online<br />
 &nbsp; Speaker at a customer organization  (17.12.2021), Online<br />
 &nbsp; Speaker at a customer organization  (24.11.2021), Online<br />
 &nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
