add seconf talk

--- a/myTalks.html
+++ b/myTalks.html
@@ -70,7 +70,8 @@
         <br>TALK: Contemporary Exploratory Testing</li>
     <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
        <br>TALK: How to Get Better at Exploratory Testing </li>
-    <li>Socrates Germany, August 25-28, Soltau, Germany
+    <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
+        <br>TALK: Patterns to Whole Team Test Automation Transformation</li>
       <br>SESSION: Ensemble Programming </li>
     <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
