Add talk on list too

--- a/myTalks.html
+++ b/myTalks.html
@@ -135,7 +135,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
 &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
 <br />
-  
+
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
   &nbsp; Keynote Speaker at Axiom Summit Conference 2022, 14.5.2022, Online<br />
 <br />
@@ -144,11 +144,14 @@ I make exceptions when I can travel with family since Feb 2022. <p>
   &nbsp; Keynote Speaker at Testing Assembly 2022, 22.9.2022, Helsinki, Finland<br />
   &nbsp; Speaker at Customer event, 14.6.2022, Helsinki, Finland<br />
 <br /> 
-  
+
 <i>Targeting Errors of Omission</i><br />
   &nbsp; Keynote Speaker at Global Testing Retreat 2022, December 9-11th 2022, Online<br />
 <br />
-    
+
+<i>Patterns to Whole Team Test Automation Transformation</i><br />
+  &nbsp; Speaker at Selenium Conference India / Virtual, 29-30.7.2022, Online<br />
+
 <i>It's More Complicated that THAT!</i><br />
 &nbsp; Speaker at SauceCon (4-5.5.2022), Online<br />
 &nbsp; Speaker at Customer event (4.3.2022), Online<br />
