--- a/myTalks.html
+++ b/myTalks.html
@@ -66,13 +66,14 @@
       <br>TALK: Automationist's Gambit</li>
     <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
-    <li><a href="https://www.meetup.com/test-automation-talks/events/285938225/">Test Automation Talks</a>, July rth, 2022, Online.
+    <li><a href="https://www.codementor.io/events/contemporary-exploratory-testing-ekwhhkyqkg">CodeMentor, June 16th, Online</a>
+      <br>TALK: Intro to Contemporary Exploratory Testing: Demo Session</li>
+    <li><a href="https://www.meetup.com/test-automation-talks/events/285938225/">Test Automation Talks</a>, July 5th, 2022, Online.
         <br>TALK: Contemporary Exploratory Testing</li>
     <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
        <br>TALK: How to Get Better at Exploratory Testing </li>
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
         <br>TALK: Patterns to Whole Team Test Automation Transformation</li>
-      <br>SESSION: Ensemble Programming </li>
     <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
@@ -118,6 +119,15 @@ I make exceptions when I can travel with family since Feb 2022. <p>
   &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
   &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
   &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Contemporary Exploratory Testing</i><br />
+&nbsp; Speaker at CodeMentor (16.6.2022), Online<br />
+&nbsp; Speaker at Test Automation Talks Meetup (5.7.2022), Online<br />
+&nbsp; Speaker at a customer organization  (17.12.2021), Online<br />
+&nbsp; Speaker at a customer organization  (24.11.2021), Online<br />
+&nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
+&nbsp; Keynote Speaker at Selenium Summit (7.2.2021), Online<br />
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
@@ -245,14 +255,6 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Trainer at Mimmit Koodaa training (2.8.2021), Online<br />
 &nbsp; Trainer at Mimmit Koodaa training (9.8.2021), Online<br />
 &nbsp; Trainer at Mimmit Koodaa training (16.8.2021), Online<br />
-<br />
-
-<i>Contemporary Exploratory Testing</i><br />
-&nbsp; Speaker at Test Automation Talks Meetup (5.7.2022), Online<br />
-&nbsp; Speaker at a customer organization  (17.12.2021), Online<br />
-&nbsp; Speaker at a customer organization  (24.11.2021), Online<br />
-&nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
-&nbsp; Keynote Speaker at Selenium Summit (7.2.2021), Online<br />
 <br />
 
 <i>Exploring Pipelines</i> <a href="https://dev.to/maaretp/exploring-pipelines-32og">[Talk turned article]</a><br />
