--- a/myTalks.html
+++ b/myTalks.html
@@ -62,7 +62,7 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Software Testing Karlsruhe -meetup, June 14th, 2022, Online. 
+    <li><a href="https://www.meetup.com/de-DE/software-testing-karlsruhe/events/284702637/">Software Testing Karlsruhe -meetup</a>, June 14th, 2022, Online. 
       <br>TALK: Automationist's Gambit</li>
     <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
@@ -74,10 +74,10 @@
        <br>TALK: How to Get Better at Exploratory Testing </li>
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
         <br>TALK: Patterns to Whole Team Test Automation Transformation</li>
-    <li>Testing Assembly, Sept 21st and 22nd, Helsinki, Finland.
+    <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
-    <li>SANAE Software Testing BEER.EX, Sept 28-29th, 2022, Bratislava, Slovakia.
+    <li><a href="https://sanae.beer">SANAE Software Testing BEER.EX</a>, Sept 28-29th, 2022, Bratislava, Slovakia.
       <br>KEYNOTE: Automationist's Gambit
       <br>TUTORIAL: Exploring Programmatic Interfaces </li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
