add program committee duties

--- a/myArticles.html
+++ b/myArticles.html
@@ -158,6 +158,21 @@
   <li><a href="https://techbeacon.com/app-dev-testing/30-test-automation-leaders-you-should-follow-twitter">30 Test Automation Leaders to Follow on Twitter</a>, TechBeacon, June 18th, 2021</li>
 </ul>
 
+<h2>Me on Conference Program Committees</h2>
+<ul>
+  <li>2020, 2022 Program Committee Member, Selenium Conference India</li>
+  <li>2021, 2022 Program Committee Member, SEETest</li>
+  <li>2015-2020 Main Organizer, European Testing Conference  (Bucharest/Romania, Helsinki/Finland, Amsterdam/Netherlands, Valencia/Spain, Amsterdam/Netherlands</li>
+  <li>2013 Program Committee Member, EuroSTAR</li>
+</ul>
+
+<h2>Positions of Responsibility</h2>
+<ul>
+  <li>2022-2023 Tivia ry Board of Directors, member of the board</li>
+  <li>2014->    Ohjelmistotestaus ry (Software Testing Finland) Board of Directors, chairman and founder</li>
+  <li>1999-2009 Sytyke Testauksen osaamisyhteis&ouml; (Finnish Association for Software Testing), chairman</li>
+</ul>
+
 <img width="400px" src="img/BannerAwards.jpg">
 
 </body>
