--- a/myTalks.html
+++ b/myTalks.html
@@ -61,8 +61,8 @@
 
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
-  <ul>
-    <li><a href="https://www.meetup.com/de-DE/software-testing-karlsruhe/events/284702637/">Software Testing Karlsruhe -meetup</a>, June 14th, 2022, Online. 
+  <>
+    <li><a href="https://www.meetup.com/de-DE/software-testing-karlsruhe/events/284702637/">Software Testing Karlsruhe -meetup</a>, June 14th, 2022, Online.
       <br>TALK: Automationist's Gambit</li>
     <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
@@ -74,6 +74,8 @@
        <br>TALK: How to Get Better at Exploratory Testing </li>
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
         <br>TALK: Patterns to Whole Team Test Automation Transformation</li>
+    <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
+        <br>SESSION: Ensemble Testing</li>
     <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
